--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
           </div>
           
           <div class="copyright">
-              <p>copyright<i class="fa fa-copyright"></i> 2019 | Design and Developed by AH</p>
+              <p>copyright<i class="fa fa-copyright"></i> 2019 | Design and Developed by Hosein Hamzei</p>
           </div>
       </footer>
       
